# cookai-backend

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.docker  Dockerfile.qa  README.md  cm.sh  compose.yml  docker-compose.yml  manage.py  migrate.sh  pyproject copy.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy_dev.yml  deploy_main.yml  deploy_prod.yml  deploy_qa.yml
ai_process/: labels.py  models.py  recommend.py  serializers.py  tests.py  urls.py  views.py
ai_process/migrations/: 0001_initial.py  0002_remove_imageupload_id_imageupload_user_and_more.py
articles/: admin.py  apps.py  articles_operator.py  coupang.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  validators.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_like.py  0003_alter_article_like_delete_likes.py  0003_alter_category_options.py  0003_alter_comment_author.py  0003_alter_ingredient_updated_at.py  0003_ingredientlink.py  0004_alter_article_recipe.py  0004_alter_ingredient_ingredient_info_and_more.py  0004_alter_recipeingredient_ingredient_quantity.py  0004_comment_like.py  0004_rename_ingredient_ingredientlink_ingredient.py  0005_alter_article_recipe.py  0005_comment_recomment_alter_article_recipe.py  0005_ingredient_updated_at.py  0005_ingredientlink_created_at_ingredientlink_price_and_more.py  0005_remove_ingredient_id_and_more.py  0006_alter_ingredient_updated_at.py  0006_remove_comment_recomment_recomment.py  0007_alter_ingredient_updated_at.py  0008_alter_ingredient_updated_at.py
cookai/: asgi.py  base.py  settings.py  urls.py  views.py  wsgi.py
photos/: admin.py  models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py
templates/users/: email_password_reset.html  email_register.html  email_welcome.html  register_email.html  reset_password_email.html  success_register_email.html
users/: admin.py  apps.py  cron.py  models.py  operator.py  serializers.py  tests.py  urls.py  users_operator.py  users_paginations.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_followings.py  0002_alter_user_username.py  (+6 more)
