[tool.poetry]
name = "cookai"
version = "0.1.0"
description = ""
authors = ["2017250297-choi <97ckdtn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
django = "^4.2.2"
djangorestframework = "^3.14.0"  # 최신 버전으로 업데이트
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^4.0.0"
requests = "^2.31.0"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.3.0"  # 최신 버전으로 업데이트
scipy = "^1.10.1"
pandas="^2.0.2"
roboflow = "^1.1.0"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
